...
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-medium"
                android:textStyle="bold"
                />

            <ImageButton
                android:id="@+id/acceptButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp"
                android:layout_gravity="right|center"
...
